Combine two pages. Layout problem fixed

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -81,7 +81,7 @@ header
       margin-bottom 10px
 
 p
-  line-height 1.8
+  line-height 1
 
 footer
   width 500px
